# OS2Orgviewer

./: .dockerignore  .env  .env.local  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  RELEASE.md.template  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vue.config.js
app/: .env.default  .env.default.production  .env.example  .env.frederikshavn-med  .env.frederikshavn-med.production  .env.frederikshavn.example  .env.frederikshavn.production  .env.os2  .env.os2.production  .env.production  CONFIGURATION.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vue.config.js
app/docs/: configuration.md  dataflow.md  development.md  index.md
app/public/: alleroed.css  ballerup.css  frederikshavn.custom.css  hjorring.adm.custom.css  hjorring.med.custom.css  holstebro-new.css  holstebro.css  iframe.example.html  index.html  settings.json  settings.template  silkeborg.css  viborg.css
app/src/: App.vue  helpers.js  keycloak.js  main.js  router.js  store.js
app/src/assets/: default-theme.css  default-theme.scss  (+2 more)
app/tests/: baseurl.js  test_orgunit.js  test_person.js  test_search.js  test_tree.js
custom-src/assets/: theme.scss
docker/: 25-symlink-html.sh  30-sed-on-index-html.sh  40-keycloak-auth.sh  50-crash.sh  50-env-to-json.sh  Dockerfile  default.conf.template  default.conf.template.j2  whitelist.json.j2  whitelist_test.py
public/: custom-theme.scss  index.html
src/: App.vue  main.js  router.js  store.js
src/assets/: default-theme.scss
src/store/: data.js
(+66 files in other folders)
