# SPDX-FileCopyrightText: 2019-2020 Magenta ApS
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "OS2orgviewer"
version = "4.0.1"
authors = ["Magenta ApS <info@magenta.dk>"]
description = "OS2orgviewer"
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2orgviewer"
keywords = ["os2orgviewer"]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"
